Add truncate, unlink, setattr, and fix not always writing out blocks.

--- a/.bazelrc
+++ b/.bazelrc
@@ -2,6 +2,9 @@ build --copt=-Wall
 build --copt=-Wpedantic
 build --copt=-Wextra
 build --copt=-Wno-c99-extensions
+build --copt=-Wno-missing-field-initializers
 build --copt=-Werror
 build --copt=-g3
 build --cxxopt=-std=c++20
+
+build --per_file_copt=external/gflags~/.*@-Wno-implicit-fallthrough,-Wno-cast-function-type
